[package]
name = "balena_tools"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
commit = { version = "0.1.0", path = "commit" }
common = { version = "0.1.0", path = "common" }
device = { version = "0.1.0", path = "device" }
exec = { version = "0.1.0", path = "exec" }
for_each = { version = "0.1.0", path = "for_each" }
libc = "0.2.139"
tag = { version = "0.1.0", path = "tag" }
update = { version = "0.1.0", path = "update" }
